<?xml version="1.0"?>
<package format="2">
  <name>raspicat_gazebo</name>
  <version>0.1.0</version>
  <description>The raspicat_gazebo package</description>
  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>raspimouse_msgs</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>raspicat_description</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- for gazebo -->
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <!-- for turtlebot3_house.world -->
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <export>
    <!-- <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/> -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/> -->
  </export>
</package>