<?xml version="1.0"?>
<package format="2">
  <name>raspicat_sim</name>
  <version>0.1.0</version>
  <description>The raspicat_sim meta package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <license>Apache-2.0</license>

  <url type="bugtracker">https://github.com/rt-net/raspicat_sim/issues</url>
  <url type="repository">https://github.com/rt-net/raspicat_sim</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>raspicat_gazebo</exec_depend>

  <export>
    <metapackage />
  </export>
</package>